@@ -6,6 +6,11 @@
   \itemize{
     \item Fixed documentation of first argument in \code{grid.echo()}
     (it can be a function, not an expression).
+    
+    \item Added better checking in plotdiff() for existence of
+    \code{convert} and \code{compare} tools and for recent-enough
+    version of R (to be able to perform the strict check for
+    differences).
   }
 }
 \section{Changes in version 0.1-1}{
